# FlexiusGPT

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CODEOWNERS  DATA_PRIVACY_ENGINE.txt  DEVICE_INTEGRATION.txt  Dockerfile  FEEDBACK_ENGINE.txt  GOAL_SETTING_ENGINE.txt  INTEGRITY_AUDIT.txt  KNOWLEDGE_BASE.txt  NUTRITION_ENGINE.txt  PHASE_MANAGER.txt  README.md  README_PRIVACY.md  SAFETY_OVERRIDES.txt  SESSION_ENGINE.txt  SPECIAL_POPULATIONS.txt  Self‑Evolving GPT System.txt  UPGRADE.md  bulk_update_schemas.py  codex_upgrade_log.txt  connector_config.json  discovery_upgrade_outline_backup.py  governance_config.json  index.html  mkdocs.yml  modularize.bat  module_descriptions.txt  orchestrator_summary.md  pyproject.toml  pyrightconfig.json  repo_analysis_summary.txt  requirements.txt  schema_template.md  test_post.py  update_descriptions.ps1  (+2 more)
.core/: __init__.py  engine.py  exceptions.py  orchestrator.py  validator.py
.devcontainer/: devcontainer.json
adapters/: cmd_adapter.bat  codex_adapter.py  gpt_adapter.py  pet_api_adapter.py
api/: main.py  security.py
core/: COMPLIANCE_ENGINE.txt  CORE_RULES.txt  PHASE_MANAGER.txt  SAFETY_OVERRIDES.txt  SESSION_ENGINE.txt  USER_PROFILE.txt
docs/: MODULES.md  index.md
getting-started/: index.html
kernel/: base_kernel.py
modules/: __init__.py
modules/module15_deep_repo_orchestrator/: interface.py  pyproject.toml
modules/module15_deep_repo_orchestrator/tests/: test_interface.py
modules/module16_meta_reporter/: interface.py  pyproject.toml
modules/module16_meta_reporter/summaries/: 2025-06-23_10-58-06_meta_summary.json  2025-06-23_10-58-06_meta_summary.txt  2025-06-23_11-04-59_meta_summary.json  2025-06-23_11-05-27_meta_summary.json
modules/module16_meta_reporter/tests_mr/: test_mr.py
modules/module17_codex_dispatcher/: interface.py  pyproject.toml
modules/module17_codex_dispatcher/tests/: test_codex_dispatcher.py
scripts/: add_missing_module_stubs.py  compliance_check.bat  compliance_check.py  export_openapi.py  gen_module_docs.py  module_hot_reload.py  test_analytics.py  update_plugin_manifest.py  validate_schema_logic.py
search/: search_index.json
self_evolving_gpt/: __init__.py  __main__.py  change_applier.py  cli.py  codex_client.py  evolution_orchestrator.py  gpt_client.py  orchestrator.py  prompt_builder.py  repo_manager.py
summaries/: meta_report_2025-06-23T11-33-12.086915.json  meta_report_2025-06-23T11-33-12.086915.txt  meta_report_2025-06-23T11-42-13.json  meta_report_2025-06-23T11-42-13.txt  repo_analysis_latest.json
tasks/: phase_enforcement_blueprint.md  upgrade_blueprint.md
templates/: CODEX_TEMPLATE.py  SPEC_TEMPLATE.md
tests/: test_00_integrity_audit.py  test_action_server.py  test_agent_runner.py  test_autodoc_agent.py  test_change_applier.py  test_chart_exporter.py  test_commit_analysis.py  test_contracts.py  test_core_files.py  test_core_lock_enforcement.py  test_digital_twin.py  test_digital_twin_commit_stats.py  test_evolution_orchestrator.py  test_file_mutation.py  test_forecast_card.py  test_github_client.py  test_gpt_client.py  test_memory_agent.py  test_memory_store.py  test_module01_core_rules.py  test_module02_phase_manager.py  test_module03_compliance_engine.py  test_module04_safety_overrides.py  test_module05_recovery_stack.py  test_module06_user_profile.py  test_module07_session_engine.py  test_module08_feedback_engine.py  test_module09_knowledge_base.py  test_module10_repo_analyzer.py  test_module_endpoint.py  test_orchestrator.py  test_patch_summarization_agent.py  test_payload_validation.py  test_planner_agent.py  test_plugin_interfaces.py  test_pr_author_agent.py  test_prompt_builder.py  test_repo_manager.py  test_tool_registry.py  test_tool_router.py  (+1 more)
tools/: codex_bootstrapper.py  codex_validator.py  deep_repo_orchestrator.py  (+5 more)
(+213 files in other folders)
