[tool.poetry]
name        = "flexius-monorepo"
version     = "1.0.0"
description = "FlexiusGPT Monorepo"
authors     = ["Flexius Team"]
packages    = []

[tool.poetry.dependencies]
python     = "^3.10"
jsonschema = "^4.0"
pydantic   = "^2.11.7"

[tool.poetry.group.dev.dependencies]
pytest       = "^7.0"
flake8       = "^6.0"
black        = "^23.0"
isort        = "^6.0.1"
bandit       = "^1.8.5"
pre-commit   = "^4.2.0"
mkdocs       = "^1.6.1"
mkdocs-material = "^9.6.14"

[tool.poetry.urls]
Homepage = "https://github.com/LumenRoseofMyth/FlexiusGPT"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
