[project]
name = "module16-meta-reporter"
version = "0.1.0"
description = ""
authors = [
    {name = "LumenRoseofMyth",email = "lumenroseofmyth@email.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "module16_meta_reporter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
