[project]
name = "module17-codex-dispatcher"
version = "0.1.0"
description = ""
authors = [
    {name = "LumenRoseofMyth",email = "lumenroseofmyth@email.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "module17_codex_dispatcher", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
